# m3l

./: .gitignore  README.md  pyproject.toml
src/hydra_plugins/mm_search_path/: mm_search_path.py
src/m3l/configs/: correct.yaml  test.yaml  train.yaml
src/m3l/configs/callbacks/: best.yaml
src/m3l/configs/data/: color_patch.yaml  varied_patch.yaml
src/m3l/configs/mm/: partial.yaml
src/m3l/configs/model/: qgac_crab.yaml
src/m3l/configs/net/: qgac_crab.yaml
src/m3l/configs/net/optimizer/: adam.yaml
src/m3l/configs/net/scheduler/: cosine_annealing.yaml
src/m3l/configs/serializer/: image_serializer.yaml
src/m3l/configs/trainer/: lightning.yaml
src/m3l/data/: __init__.py  color_patch.py  folder_of_jpeg_dataset.py  imagelist.py  jpeg_quantized_dataset.py  unlabeled_image_folder.py  utils.py  varied_patch.py
src/m3l/data/serializers/: __init__.py  image_serializer.py  serializer.py
src/m3l/layers/: coefficient_shuffler.py  perfrequency_convolution.py
src/m3l/models/: __init__.py  loghelper.py  qgac.py  qgac_base.py  qgac_crab.py  weight_init.py
src/m3l/models/layers/: __init__.py
src/m3l/models/qgac/: qgac.py  qgac_base.py  qgac_crab.py  qgac_lite_generalized.py
src/m3l/run/: configs.py  correct.py  experiment.py  partial.py  progress.py  reproduce_qgac_simple.py  resolvers.py  test.py  train.py
src/mm/configs/: correct.yaml  qgac_crab.yaml  test.yaml  train.yaml
src/mm/configs/cluster/: simple.yaml
src/mm/configs/cometml/: default.yaml
src/mm/configs/data/: color_patch.yaml  varied_patch.yaml
src/mm/configs/mlflow/: databricks.yaml  local.yaml  mlflow.yaml
src/mm/configs/mlflow/logging/: default.yaml
src/mm/configs/mlflow/run/: default.yaml
src/mm/configs/mm/: partial.yaml
src/mm/configs/model/: original_qgac_paper.yaml  qgac_crab.yaml
src/mm/configs/model/learning_config/: base.yaml
src/mm/configs/model/scheduler/: cosine_annealing.yaml
src/mm/configs/net/: qgac_crab.yaml
src/mm/configs/net/optimizer/: adam.yaml
src/mm/configs/net/scheduler/: cosine_annealing.yaml
src/mm/configs/serializer/: image_serializer.yaml
src/mm/configs/trainer/: lightning.yaml
src/mm/configs/trainer/logger/: mlflow_local.yaml  tensorboard_local.yaml
src/mm/configs/wandb/: default.yaml
src/mm/data/: __init__.py  color_patch.py  folder_of_jpeg_dataset.py  image_serializer.py  imagelist.py  jpeg_quantized_dataset.py  utils.py  varied_patch.py
src/mm/layers/: cfm.py
src/mm/models/: loghelper.py  qgac.py  qgac_base.py  qgac_crab.py  qgac_lite_generalized.py  weight_init.py
src/mm/run/: __init__.py  configs.py  correct.py  experiment.py  progress.py  reproduce_qgac_simple.py  resolvers.py  slurm.py  train.py
src/mme/configs/: qgac_crab.yaml
src/mme/configs/data/: varied_patch.yaml
src/mme/configs/launcher/: local.yaml  slurm.yaml
src/mme/configs/model/: qgac_crab.yaml
src/mme/data/: __init__.py  color_patch.py  jpeg_quantized_dataset.py  unlabeled_image_folder.py  varied_patch.py
src/mme/layers/: __init__.py  attention.py  cfm.py  rrdb.py
src/mme/models/: __init__.py  qgac.py  qgac_crab.py  qgac_lite_generalized.py
src/mme/run/: __init__.py  base_runner.py  config.py  register.py  reproduce_qgac_simple.py  train.py
src/mme/scripts/: reproduce_qgac_simple.py  run_simple.py
