[tool.poetry]
name = "m3l"
version = "0.0.0" 
description = "MultiMedia and Machine Learning"
authors = [
    "Max Ehrlich"
]

license = "MIT"
readme = "README.md"

homepage = ""
repository = ""
documentation = ""


classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">= 3.7.1, < 4.0"
pillow = "^8.0.1"

torch = "1.9.0"
torchvision = "0.10.0"
torchjpeg = "0.9.21"
pytorch-lightning = "1.4.1"

hydra-core = "1.1.0"
hydra-colorlog = "1.1.0"

submitit = { version = "^1.3.3", optional = true }
hydra-submitit-launcher = { version = "^1.1.5", optional = true }

wandb = { version = "^0.11.2", optional = true }
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
rope = "^0.19.0"

[tool.poetry.extras]
slurm = ["submitit", "hydra-submitit-launcher"]
wandb = ["wandb"]

[build-system]
requires = [
    "poetry>=1.0.10",
]
build-backend = "poetry.masonry.api"